// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM Transaction Error Rate Transform Generator adds the custom kql filter to the query 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "term": Object {
          "metricset.name": "transaction",
        },
      },
      Object {
        "terms": Object {
          "event.outcome": Array [
            "success",
            "failure",
          ],
        },
      },
      Object {
        "range": Object {
          "@timestamp": Object {
            "gte": "now-7d",
          },
        },
      },
      Object {
        "match": Object {
          "service.name": "irrelevant",
        },
      },
      Object {
        "match": Object {
          "service.environment": "irrelevant",
        },
      },
      Object {
        "match": Object {
          "transaction.name": "irrelevant",
        },
      },
      Object {
        "match": Object {
          "transaction.type": "irrelevant",
        },
      },
      Object {
        "bool": Object {
          "filter": Array [
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "match_phrase": Object {
                      "my.field": "value",
                    },
                  },
                ],
              },
            },
            Object {
              "bool": Object {
                "minimum_should_match": 1,
                "should": Array [
                  Object {
                    "bool": Object {
                      "minimum_should_match": 1,
                      "should": Array [
                        Object {
                          "range": Object {
                            "foo": Object {
                              "gte": "12",
                            },
                          },
                        },
                      ],
                    },
                  },
                  Object {
                    "bool": Object {
                      "minimum_should_match": 1,
                      "should": Array [
                        Object {
                          "range": Object {
                            "bar": Object {
                              "lte": "100",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          ],
        },
      },
    ],
  },
}
`;

exports[`APM Transaction Error Rate Transform Generator does not include the query filter when params are '*' 1`] = `
Object {
  "bool": Object {
    "filter": Array [
      Object {
        "term": Object {
          "metricset.name": "transaction",
        },
      },
      Object {
        "terms": Object {
          "event.outcome": Array [
            "success",
            "failure",
          ],
        },
      },
      Object {
        "range": Object {
          "@timestamp": Object {
            "gte": "now-7d",
          },
        },
      },
    ],
  },
}
`;

exports[`APM Transaction Error Rate Transform Generator returns the expected transform params for timeslices slo 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 1,
  },
  "description": "Rolled-up SLI data for SLO: irrelevant",
  "dest": Object {
    "index": ".slo-observability.sli-v1",
    "pipeline": ".slo-observability.sli.monthly",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "slo.denominator": Object {
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.isGoodSlice": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "goodEvents": "slo.numerator>_count",
            "totalEvents": "slo.denominator>_count",
          },
          "script": "params.goodEvents / params.totalEvents >= 0.95 ? 1 : 0",
        },
      },
      "slo.numerator": Object {
        "filter": Object {
          "bool": Object {
            "should": Object {
              "match": Object {
                "event.outcome": "success",
              },
            },
          },
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "@timestamp",
          "fixed_interval": "2m",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "metrics-apm*",
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "metricset.name": "transaction",
            },
          },
          Object {
            "terms": Object {
              "event.outcome": Array [
                "success",
                "failure",
              ],
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "gte": "now-7d",
              },
            },
          },
          Object {
            "match": Object {
              "service.name": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "service.environment": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "transaction.name": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "transaction.type": "irrelevant",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "@timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;

exports[`APM Transaction Error Rate Transform Generator returns the expected transform params with every specified indicator params 1`] = `
Object {
  "_meta": Object {
    "managed": true,
    "managed_by": "observability",
    "version": 1,
  },
  "description": "Rolled-up SLI data for SLO: irrelevant",
  "dest": Object {
    "index": ".slo-observability.sli-v1",
    "pipeline": ".slo-observability.sli.monthly",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggregations": Object {
      "slo.denominator": Object {
        "filter": Object {
          "match_all": Object {},
        },
      },
      "slo.numerator": Object {
        "filter": Object {
          "bool": Object {
            "should": Object {
              "match": Object {
                "event.outcome": "success",
              },
            },
          },
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "@timestamp",
          "fixed_interval": "1m",
        },
      },
      "slo.id": Object {
        "terms": Object {
          "field": "slo.id",
        },
      },
      "slo.revision": Object {
        "terms": Object {
          "field": "slo.revision",
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
  },
  "source": Object {
    "index": "metrics-apm*",
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "metricset.name": "transaction",
            },
          },
          Object {
            "terms": Object {
              "event.outcome": Array [
                "success",
                "failure",
              ],
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "gte": "now-7d",
              },
            },
          },
          Object {
            "match": Object {
              "service.name": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "service.environment": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "transaction.name": "irrelevant",
            },
          },
          Object {
            "match": Object {
              "transaction.type": "irrelevant",
            },
          },
        ],
      },
    },
    "runtime_mappings": Object {
      "slo.id": Object {
        "script": Object {
          "source": Any<String>,
        },
        "type": "keyword",
      },
      "slo.revision": Object {
        "script": Object {
          "source": "emit(1)",
        },
        "type": "long",
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "1m",
      "field": "@timestamp",
    },
  },
  "transform_id": Any<String>,
}
`;
